# GraphicsDemo

./: README.md
GAMES101/: README.md
GAMES101/hw0/: CMakeLists.txt  main.cpp
GAMES101/hw1/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101/hw2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101/hw3/: CMakeLists.txt  OBJ_Loader.h  README.md  Texture.hpp  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101/hw4/: CMakeLists.txt  README.md  main.cpp
GAMES101/hw5/: CMakeLists.txt  Object.hpp  README.md  Renderer.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
GAMES101/hw5/README.assets/: webp
